Avoid crash when restoring the session after a logout

BUG: 487952